[gd_scene format=3 uid="uid://dck7n5np1jfju"]

[ext_resource type="Script" uid="uid://crkdbtujnomrt" path="res://scripts/game_over_screen.gd" id="1_uo2fv"]
[ext_resource type="LabelSettings" uid="uid://x0nkvs0ub104" path="res://styles/ingametext.tres" id="2_047uy"]
[ext_resource type="FontFile" uid="uid://bap4myteag8nn" path="res://assets/fonts/PixelOperator.ttf" id="3_5pdws"]
[ext_resource type="Texture2D" uid="uid://c5i0soplliru6" path="res://sprites/heart.png" id="5_0i1j5"]
[ext_resource type="Script" uid="uid://2rb5jcc3cp2" path="res://scripts/hearts.gd" id="5_047uy"]
[ext_resource type="Texture2D" uid="uid://dujgsrdov3axv" path="res://sprites/shield.png" id="6_5pdws"]
[ext_resource type="PackedScene" uid="uid://ct4snjslscwpc" path="res://scenes/boon_dialog.tscn" id="6_047uy"]
[ext_resource type="Script" uid="uid://boc8deqyb32ee" path="res://scenes/shields.gd" id="6_hd3ao"]

[node name="Hud" type="CanvasLayer" unique_id=2108915235]

[node name="GameOverScreen" type="Panel" parent="." unique_id=1866790166]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uo2fv")

[node name="GameOverLabel" type="Label" parent="GameOverScreen" unique_id=1962750824]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -81.5
offset_right = 77.0
offset_bottom = -58.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OEVER"
label_settings = ExtResource("2_047uy")
horizontal_alignment = 1

[node name="DevelopedByLabel" type="Label" parent="GameOverScreen" unique_id=289850842]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.5
offset_top = -40.0
offset_right = 128.5
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
text = "this demo was developed and published by 
DARKPALETTEGAMES"
label_settings = ExtResource("2_047uy")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverScreen" unique_id=1152414147]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -12.0
offset_right = 28.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_5pdws")
text = "RESTART"

[node name="Time" type="Label" parent="." unique_id=138812303]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_bottom = 23.0
grow_horizontal = 0
text = "SCORE : 0"
label_settings = ExtResource("2_047uy")

[node name="Hearts" type="HBoxContainer" parent="." unique_id=942398442]
offset_left = 8.0
offset_top = 8.0
offset_right = 224.0
offset_bottom = 48.0
script = ExtResource("5_047uy")

[node name="Heart1" type="TextureRect" parent="Hearts" unique_id=1538898368]
layout_mode = 2
texture = ExtResource("5_0i1j5")
expand_mode = 2

[node name="Heart2" type="TextureRect" parent="Hearts" unique_id=963644253]
layout_mode = 2
texture = ExtResource("5_0i1j5")
expand_mode = 2

[node name="Heart3" type="TextureRect" parent="Hearts" unique_id=232142910]
layout_mode = 2
texture = ExtResource("5_0i1j5")
expand_mode = 2

[node name="Heart4" type="TextureRect" parent="Hearts" unique_id=1874030902]
layout_mode = 2
texture = ExtResource("5_0i1j5")
expand_mode = 2

[node name="Heart5" type="TextureRect" parent="Hearts" unique_id=1005886568]
layout_mode = 2
texture = ExtResource("5_0i1j5")
expand_mode = 2

[node name="Heart6" type="TextureRect" parent="Hearts" unique_id=1050429089]
layout_mode = 2
texture = ExtResource("5_0i1j5")
expand_mode = 2

[node name="Shields" type="HBoxContainer" parent="." unique_id=1488305764]
offset_left = 8.0
offset_top = 56.945
offset_right = 334.0
offset_bottom = 96.94498
script = ExtResource("6_hd3ao")

[node name="Stamina1" type="TextureRect" parent="Shields" unique_id=1446262534]
layout_mode = 2
texture = ExtResource("6_5pdws")
expand_mode = 2

[node name="Stamina2" type="TextureRect" parent="Shields" unique_id=656106747]
layout_mode = 2
texture = ExtResource("6_5pdws")
expand_mode = 2

[node name="Stamina3" type="TextureRect" parent="Shields" unique_id=668342446]
layout_mode = 2
texture = ExtResource("6_5pdws")
expand_mode = 2

[node name="Stamina4" type="TextureRect" parent="Shields" unique_id=1248819436]
layout_mode = 2
texture = ExtResource("6_5pdws")
expand_mode = 2

[node name="Stamina5" type="TextureRect" parent="Shields" unique_id=489355934]
layout_mode = 2
texture = ExtResource("6_5pdws")
expand_mode = 2

[node name="Stamina6" type="TextureRect" parent="Shields" unique_id=396449965]
layout_mode = 2
texture = ExtResource("6_5pdws")
expand_mode = 2

[node name="BoonDialog" parent="." unique_id=155098323 instance=ExtResource("6_047uy")]
offset_top = 116.865
offset_bottom = 116.86493

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=386712310]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="GameOverScreen/RestartButton" to="GameOverScreen" method="_on_button_restart_pressed"]
